@@ -1,3 +1,7 @@
+#ifndef DEPRECATED_IN_MAC_OS_X_VERSION_10_5_AND_LATER
+#define DEPRECATED_IN_MAC_OS_X_VERSION_10_5_AND_LATER
+#endif
+
 #include <wtf/Platform.h>
 #include <kjs/ExecState.h>
 
