@@ -1,3 +1,13 @@
+2007-02-19  Timothy Hatcher  <timothy@apple.com>
+
+        Reviewed by Geoff.
+
+        <rdar://problem/4636301> Deprecate JavaScriptGlue
+
+        * JavaScriptGlue.h: adds DEPRECATED_IN_MAC_OS_X_VERSION_10_5_AND_LATER to everything
+        * JavaScriptGlue.xcodeproj/project.pbxproj: use -Wno-deprecated-declarations to keep the project building
+        * config.h: define DEPRECATED_IN_MAC_OS_X_VERSION_10_5_AND_LATER as empty on other systems
+
 2007-02-16  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
